Fix: too dark in smaller devices.

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -337,11 +337,15 @@ main {
     --font-md: 1rem;
   }
 
+  body::before{
+    box-shadow: inset 0 0 30px 10px rgba(0,0,0,0.9);
+  }
+
   #game {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr auto;
     grid-gap: 0;
-    width: calc((10*var(--grid-size) + var(--grid-gap)*9) + 1rem);
+    width: calc((10*var(--grid-size) + var(--grid-gap)*9) + 4rem);
   }
 
   #Player1{
@@ -372,6 +376,10 @@ main {
   }
 
   body{font-size: 12px;}
+
+  body::before{
+    box-shadow: inset 0 0 25px 10px rgba(0,0,0,0.9);
+  }
 
   #game {
     width: 100%;
